# HelloFFmpeg

./: CMakeLists.txt  README.md
cmake/: config.h.in
include/seeker/: loggerApi.h
tutorial/alFramework/: CMakeLists.txt
tutorial/alFramework/include/: Framework.h
tutorial/alFramework/src/: aldlist.cpp
tutorial/capture_audio/: CMakeLists.txt  capture_audio.cpp  main.cpp
tutorial/capture_audio/include/: AacAdtsEncoder.h  AudioCollector.h  ReSampler.h  ffMuxing.h  wav_reader.hpp  wav_writer.hpp
tutorial/capture_audio/src/: capture_audio_to_aac.cpp  capture_audio_to_aac2.cpp  capture_audio_to_wav.cpp  capture_audio_to_wav2.cpp
tutorial/hello/: CMakeLists.txt  hello.cpp
tutorial/muxing/: CMakeLists.txt  muxing.cpp
